syntax = "proto3";

package functions;


/* This is the base function used whenever we talk about a function.
 * This is the minimal definition of a function and its runtime.
 */
message Function {
  string name = 1;
  string version = 2;
  map<string, string> metadata = 3;
  StreamSpec input = 4;
  StreamSpec output = 5;
  Attachment code = 6;
  repeated Attachment attachments = 7;
  Runtime runtime = 8;
  uint64 created_at = 9;
}


message Functions {
  repeated Function functions = 1;
}


enum ChannelType {
  STRING = 0;
  BOOL = 1;
  INT = 2;
  FLOAT = 3;
  BYTES = 4;
}


message StreamSpec {
  map<string, ChannelSpec> required = 1;
  map<string, ChannelSpec> optional = 2;
}


message ChannelSpec {
  ChannelType type = 1;
  string description = 2;
}


message Runtime {
  string name = 1;
  string entrypoint = 2;
  map<string, string> arguments = 3;
}


message Attachment {
  string name = 1;
  AttachmentUrl url = 2;
  map<string, string> metadata = 3;
  Checksums checksums = 4;
  uint64 created_at = 5;
}


message AttachmentUrl {
  string url = 1;
  AuthMethod auth_method = 2;
}


enum AuthMethod {
  NONE = 0;
  BASIC = 1;
  OAUTH2 = 2;
}


message Checksums {
  string sha256 = 1;
}
